Change Tx to 5511. Save audio examples to audio_ignored_examples. Update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -10,9 +10,8 @@ venv/
 
 # ignore google speech commands dataset
 google_dataset
-
-# Stub data
 stub_data/
+audio_ignored_examples/
 
 # ignore jupyter notebook checkpoints
 .ipynb_checkpoints
